--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+URL: http://github.com/pegeler/YARD
+BugReports: https://github.com/pegeler/YARD/issues
